# eurocar_telegram_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
aiogram3_calendar/: __init__.py  simple_calendar.py
bot/: __main__.py  main.py
bot/commands/: __init__.py  contacts.py  help.py  menu.py  name.py  phone.py  start.py
bot/handlers/: __init__.py  faq_handlers.py  rent_handlers.py  unhandled.py  user_name_handlers.py  user_phone_handlers.py
bot/keyboards/: __init__.py  faq_keyboards.py  main_keyboard.py  rent_keyboards.py
bot/models/: AvailableCars.py  CarClassification.py  CarParks.py  FaqCallback.py  KeyNames.py  Regions.py  RentCallback.py  RentCallbackNames.py  TextNames.py  __init__.py
bot/redis_instance/: __init__.py  redis_instance.py
bot/states/: RentAutoState.py  __init__.py
bot/templates/commands_text/: contacts.txt  help.txt  start.txt
bot/templates/faq/: documents.txt  insurance.txt  rent_decline.txt  rent_types.txt  rent_view.txt
bot/utils/: __init__.py  excel_data_updater.py  excel_reader.py  generate_preview.py  send_email.py
