[tool.poetry]
name = "eurocar-telegram-bot"
version = "0.1.0"
description = ""
authors = ["blowyourbra1n <blowyourbra1n@mail.ru>"]
readme = "README.md"
packages = [{include = "eurocar_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
load-dotenv = "^0.1.0"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
gspread = "^5.9.0"
pandas = "^2.0.2"
openpyxl = "^3.1.2"
google-api-python-client = "^2.88.0"
oauth2client = "^4.1.3"
redis = {version = "^4.2.0rc1"}
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
